k8s/quotesapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  labels:
    app: quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes
  template:
    metadata:
      labels:
        app: quotes
    spec:
      containers:
        - image: tomir/quotes:1.1
          name: quotes
