k8s/quotesapp-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-postgres
spec:
  selector:
    matchLabels:
      app: quotes-postgres
  template:
    metadata:
      labels:
        app: quotes-postgres
    spec:
      volumes:
        - name: quotes-postgres-storage
          persistentVolumeClaim:
            claimName: quotes-postgres-pvc
      containers:
        - image: library/postgres:9.6
          name: quotes-postgres
          ports:
            - containerPort: 5432
              name: quotes-postgres
          volumeMounts:
            - name: quotes-postgres-storage
              mountPath: /var/lib/postgresql/data

---
apiVersion: v1
kind: Service
metadata:
  name: quotes-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: quotes-postgres
