k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotesapp
  labels:
    app: qoutesapp
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 32222
  selector:
    app: quotesapp
